apps/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr-service
  namespace: default
spec:
  selector:
    app: radarr
  ports:
    - port: 7878
      targetPort: 7878
