apps/radarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr-ingress
  namespace: default
spec:
  rules:
    - host: radarr.192.168.1.30.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr-service
                port:
                  number: 7878
  tls:
    - hosts:
        - radarr.192.168.1.30.sslip.io
